bdr.BDR.scala.error
Compilation error:
BDR:2: error: not found: value litMesage
  if (litMesage()=='R'){
      ^